--- a/NEW/Frontend/package.json
+++ b/NEW/Frontend/package.json
@@ -20,6 +20,7 @@
     "axios": "^1.6.5",
     "cors": "^2.8.5",
     "ethers": "^5.7.2",
+    "etherscan-api": "^10.3.0",
     "graphql": "^16.3.0",
     "ipfs-deploy": "^11.2.0",
     "mongoose": "^8.1.0",
