--- a/NEW/Frontend/package.json
+++ b/NEW/Frontend/package.json
@@ -23,6 +23,7 @@
     "etherscan-api": "^10.3.0",
     "graphql": "^16.3.0",
     "ipfs-deploy": "^11.2.0",
+    "ldrs": "^1.0.1",
     "mongoose": "^8.1.0",
     "react": "^18.2.0",
     "react-bootstrap": "^2.10.0",
